src/main/javacc/Tiny.jj
options {
    STATIC = false;
}

PARSER_BEGIN(Tiny)

package com.mycompany.tiny.compiler;

public class Tiny {
}

PARSER_END(Tiny)

SKIP : { " " | "\t" | "\n" | "\r" | < COMMENT: "{" (~["}"])* "}" >}

TOKEN : {
    < IF: "if" >
  | < THEN: "then" >
  | < ELSE: "else" >
  | < END: "end" >
  | < REPEAT: "repeat" >
  | < UNTIL: "until" >
  | < READ: "read" >
  | < WRITE: "write" >
  | < NUM: (["0"-"9"])+ >
  | < ID: ["a"-"z","A"-"Z"] ( ["a"-"z", "A"-"Z", "0"-"9"] )*>
  | < ATRIB: ":=">
  | < SOM: "+">
  | < SUB: "-">
  | < MULT: "*">
  | < DIV: "/">
  | <ABREPARE: "(">
  | <FECHAPARE: ")">
  | < MENOR: "<">
  | < MAIOR: ">">
  | < IGUAL: "=">
  | < PONTOVIRGULA: ";">
}

void Programa() :
{
}//variáveis locais
{
    SequenciaComandos() <EOF>
}

private void SequenciaComandos():
{}
{
    Instrucao() (<PONTOVIRGULA> Instrucao())*
}

private void Instrucao():
{}
{
    <ID> <ATRIB> Expressao()
  | ComandoRepeat()
  | ComandoIf()
  | ComandoRead()
  | ComandoWrite()
}

private void ComandoRepeat():
{}
{
    <REPEAT> SequenciaComandos() <UNTIL> Expressao()
}

private void ComandoIf():
{}
{
    <IF> Expressao() <THEN> SequenciaComandos() [ <ELSE> SequenciaComandos() ] <END>
}

private void ComandoRead():
{}
{
    <READ> <ID>
}

private void ComandoWrite():
{}
{
    <WRITE> Expressao()
}

void Expressao():
{}
{
  ExpressaoSimples()
  [ (<MENOR> | <MAIOR> | <IGUAL>) ExpressaoSimples() ]
}

void ExpressaoSimples():
{}
{
  Termo()
  ((<SOM> | <SUB>) Termo())*
}

void Termo():
{}
{
  Fator()
  ((<MULT> | <DIV>) Fator())*
}

void Fator():
{}
{
  <ID> | <NUM>|<ABREPARE> Expressao()<FECHAPARE>
}
